# pst-to-mbox-converter

./: .gitignore  GEMINI.md  README.md  pyproject.toml  spec_v2.md
.gemini/commands/: branch.toml  issue.md
.tmp/: commit_message_v0.3.0.txt
docs/: spec.md
docs/issue/: template.md  v0.1.1.md  v0.2.0.md  v0.3.0.md  v0.3.1.md  v0.4.0.md
docs/reference/: libpff.3
issue/: v0.1.md
src/pst_to_mbox_converter/: main.py  mbox_writer.py  pst_reader.py
tests/: test_conversion.py
tests/data/: sample.pst
