[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pst-to-mbox-converter"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A command-line tool to convert PST files to MBOX format."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
pst-converter = "pst_to_mbox_converter.main:main"

[project.optional-dependencies]
test = [
    "pytest",
]
